Update Pengolahan Data EM3 Thomson Tube.ipynb

--- a/EM3 Thomson Tube/Pengolahan Data EM3 Thomson Tube.ipynb
+++ b/EM3 Thomson Tube/Pengolahan Data EM3 Thomson Tube.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export Ke Excel"
+    "# Export ke Excel"
    ]
   },
   {
